style(hero): fix uploaded side image filenames, reduce left image size and shift it higher

--- a/css/style.css
+++ b/css/style.css
@@ -320,7 +320,9 @@ img {
 }
 
 .left-img {
-  height: 140px;
+  height: 100px;
+  margin-bottom: 3rem;
+  /* Pushes the image vertically higher relative to the center baseline */
 }
 
 .right-img {
@@ -1680,7 +1682,8 @@ img {
   }
 
   .left-img {
-    height: 60px;
+    height: 40px;
+    margin-bottom: 1.5rem;
   }
 
   .right-img {
